--- a/templates/subprojects/mobile/custom_form_update_form.html
+++ b/templates/subprojects/mobile/custom_form_update_form.html
@@ -1,11 +1,41 @@
 {% extends 'subprojects/mobile/layout/mobile_base.html' %}
 {% load static i18n custom_tags bootstrap4 %}
+
 {% block content %}
-<form method="post" hx-post="">
-    {% csrf_token %}
-    {% bootstrap_form custom_form %}
-    <div class="text-right mt-3">
-        <button type="submit" class="btn btn-primary">{% translate 'Save' %}</button>
+<div class="row justify-content-center">
+    <div class="col-12">
+        {% if success %}
+            <div class="alert alert-success text-center mt-5 mb-4 p-4 fs-5" role="alert" style="border-radius: 16px;">
+                <i class="fas fa-check-circle mr-2"></i>
+                {% translate "Form saved successfully!" %}
+            </div>
+            <div class="text-center mb-4">
+                <a href="{% url 'subprojects:mobile:select-subproject-custom-fields' subproject.id %}" class="btn btn-secondary btn-lg px-4" style="border-radius: 12px;">
+                    <i class="fas fa-arrow-left mr-2"></i>
+                    {% translate 'Back to Subproject' %}
+                </a>
+            </div>
+        {% else %}
+            <div class="card card-primary mt-4 mb-4 shadow">
+                <div class="card-body">
+                    <form method="post" hx-post="">
+                        {% csrf_token %}
+                        {% bootstrap_form custom_form %}
+                        <div class="d-flex justify-content-end mt-3">
+                            <a href="{% url 'subprojects:mobile:select-subproject-custom-fields' subproject.id %}"
+                               class="btn btn-outline-secondary btn-lg mr-2">
+                                <i class="fas fa-times mr-1"></i>
+                                {% translate 'Cancel' %}
+                            </a>
+                            <button type="submit" class="btn btn-primary btn-lg">
+                                <i class="fas fa-save mr-1"></i>
+                                {% translate 'Save' %}
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        {% endif %}
     </div>
-</form>
+</div>
 {% endblock %}
