--- a/templates/subprojects/mobile/register_menu.html
+++ b/templates/subprojects/mobile/register_menu.html
@@ -1,20 +1,29 @@
 {% extends 'subprojects/mobile/layout/mobile_base.html' %}
 {% load static i18n %}
 {% get_current_language as LANGUAGE_CODE %}
+
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-12">
-        <div class="text-center mt-4 mb-3">
-            <h4 class="font-weight-bold">{% translate 'Register' %}</h4>
+        <div class="card card-primary mt-3 mb-4 shadow">
+            <div class="card-header position-relative d-flex align-items-center justify-content-center" style="min-height:56px;">
+                <a href="{% url 'subprojects:mobile:index' %}"
+                   class="btn btn-link p-2 position-absolute" style="left: 0; top: 50%; transform: translateY(-50%); font-size:1.4rem;">
+                    <i class="fas fa-arrow-left"></i>
+                </a>
+                <h4 class="card-title mb-0 text-center w-100" style="pointer-events: none;">
+                    {% translate 'Register' %}
+                </h4>
+            </div>
+            <div class="card-body">
+                <a href="{% url 'subprojects:mobile:register-subproject' %}"
+                   class="btn btn-primary btn-block btn-lg d-flex align-items-center justify-content-center mb-2 shadow-sm">
+                    <i class="fas fa-briefcase mr-2"></i>
+                    <span>{% translate 'Create subproject' %}</span>
+                    <i class="fas fa-chevron-right ml-2"></i>
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="col-12">
-        <a href="{% url 'subprojects:mobile:register-subproject' %}"
-           class="btn btn-primary btn-block btn-lg d-flex align-items-center justify-content-center mb-4 shadow-sm">
-            <i class="fas fa-briefcase mr-2"></i>
-            <span>{% translate 'Create subproject' %}</span>
-            <i class="fas fa-chevron-right ml-2"></i>
-        </a>
     </div>
 </div>
 {% endblock %}
