--- a/templates/subprojects/mobile/register_subproject.html
+++ b/templates/subprojects/mobile/register_subproject.html
@@ -9,9 +9,12 @@
             <div class="card-header text-center">
                 <h4 class="card-title mb-0">{% translate 'Register Subproject' %}</h4>
             </div>
-            <form action="" method="post">
+            <form action="." method="post">
                 {% csrf_token %}
                 <div class="card-body">
+                    <div class="form-group">
+                        {% bootstrap_field form.external_id show_label=True %}
+                    </div>
                     <div class="form-group">
                         {% bootstrap_field form.administrative_level show_label=True %}
                     </div>
@@ -48,15 +51,18 @@
                     <div class="form-group">
                         {% bootstrap_field form.type show_label=True %}
                     </div>
+                    <div class="form-group">
+                        {% bootstrap_field form.beneficiary_groups show_label=True %}
+                    </div>
                     <div class="form-group mb-0 d-flex justify-content-between">
                         <a href="{% url 'subprojects:mobile:index' %}" class="btn btn-outline-secondary btn-lg mr-2" style="flex:1;">
                             <i class="fas fa-times mr-1"></i>
                             {% translate 'Cancel' %}
                         </a>
-                        <a href="{% url 'subprojects:mobile:register-menu' %}" class="btn btn-primary btn-lg" style="flex:1;">
+                        <button type="submit" class="btn btn-primary btn-lg">
                             <i class="fas fa-save mr-1"></i>
                             {% translate 'Save' %}
-                        </a>
+                        </button>
                     </div>
                 </div>
             </form>
