--- a/templates/subprojects/mobile/register_menu.html
+++ b/templates/subprojects/mobile/register_menu.html
@@ -22,6 +22,12 @@
                     <span>{% translate 'Create subproject' %}</span>
                     <i class="fas fa-chevron-right ml-2"></i>
                 </a>
+                <a href="{% url 'subprojects:mobile:register-contractor' %}"
+                   class="btn btn-primary btn-block btn-lg d-flex align-items-center justify-content-center mb-2 shadow-sm">
+                    <i class="fas fa-id-badge mr-2"></i>
+                    <span>{% translate 'Create contractor' %}</span>
+                    <i class="fas fa-chevron-right ml-2"></i>
+                </a>
                 <a href="{% url 'subprojects:mobile:register-village-development-committee' %}"
                    class="btn btn-primary btn-block btn-lg d-flex align-items-center justify-content-center mb-2 shadow-sm">
                     <i class="fas fa-users mr-2"></i>
