--- a/templates/subprojects/mobile/select_subproject_custom_field.html
+++ b/templates/subprojects/mobile/select_subproject_custom_field.html
@@ -2,6 +2,21 @@
 {% load static i18n %}
 {% get_current_language as LANGUAGE_CODE %}
 
+{% block extracss %}
+    <style>
+        .notification-dot {
+            position: absolute;
+            top: 8px;
+            right: 16px;
+            width: 10px;
+            height: 10px;
+            background-color: red;
+            border-radius: 50%;
+            z-index: 10;
+        }
+    </style>
+{% endblock %}
+
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-12">
@@ -24,6 +39,9 @@
                                 <i class="fas fa-briefcase mr-3 text-warning"></i>
                                 <span class="flex-grow-1">{{ subproject_custom_field.name }}</span>
                                 <i class="fas fa-chevron-right ml-2"></i>
+                                {% if subproject_custom_field.has_no_response %}
+                                <span class="notification-dot"></span>
+                                {% endif %}
                             </a>
                         {% endfor %}
                     </div>
