--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -19,6 +19,12 @@
 
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a href="" class="nav-link">
+                <i class="fa fa-bell"></i>
+                <span class="badge badge-danger navbar-badge">4</span>
+            </a>
+        </li>
         {% if OTHER_LANGUAGES %}
             {% include 'layout/language_dropdown.html' %}
         {% endif %}
