--- a/templates/subprojects/schema_form.html
+++ b/templates/subprojects/schema_form.html
@@ -86,9 +86,10 @@
         <div class="form-group">
           <label for="field-type-input">Field Type</label>
           <select class="form-control" id="field-type-input">
-            <option value="string">Text</option>
-            <option value="number">Number</option>
-            <option value="enum">Dropdown</option>
+              <option value="string">Text</option>
+              <option value="number">Number</option>
+              <option value="enum">Dropdown</option>
+              <option value="date">Date</option>
           </select>
         </div>
         <div class="form-group" id="enum-options-group" style="display: none;">
