Como PIU Staff quiero poder editar un formulario custom

--- a/templates/subprojects/custom_field_list.html
+++ b/templates/subprojects/custom_field_list.html
@@ -34,10 +34,10 @@
                                 <td>
                                   <div class="btn-group">
                                     <!-- Update Info (functional) -->
-                                    <button type="button"
+                                    <a href="{% url 'subprojects:subproject_custom_fields_update' custom_field.pk %}"
                                             class="btn btn-default btn-flat">
                                       <i class="fas fa-pencil-alt text-primary"></i>
-                                    </button>
+                                    </a>
 
                                     <!-- Field Visit -->
                                     <button type="button"
