--- a/templates/subprojects/mobile/register_menu.html
+++ b/templates/subprojects/mobile/register_menu.html
@@ -1,5 +1,5 @@
 {% extends 'subprojects/mobile/layout/mobile_base.html' %}
-{% load static i18n %}
+{% load static i18n authorization_tags %}
 {% get_current_language as LANGUAGE_CODE %}
 
 {% block content %}
@@ -16,24 +16,30 @@
                 </h4>
             </div>
             <div class="card-body">
-                <a href="{% url 'subprojects:mobile:register-subproject' %}"
-                   class="btn btn-primary btn-block btn-lg d-flex align-items-center justify-content-center mb-2 shadow-sm">
-                    <i class="fas fa-briefcase mr-2"></i>
-                    <span>{% translate 'Create subproject' %}</span>
-                    <i class="fas fa-chevron-right ml-2"></i>
-                </a>
-                <a href="{% url 'subprojects:mobile:register-contractor' %}"
-                   class="btn btn-primary btn-block btn-lg d-flex align-items-center justify-content-center mb-2 shadow-sm">
-                    <i class="fas fa-id-badge mr-2"></i>
-                    <span>{% translate 'Create contractor' %}</span>
-                    <i class="fas fa-chevron-right ml-2"></i>
-                </a>
+                {% if user|has_group:'Community facilitator' %}
+                    <a href="{% url 'subprojects:mobile:register-subproject' %}"
+                       class="btn btn-primary btn-block btn-lg d-flex align-items-center justify-content-center mb-2 shadow-sm">
+                        <i class="fas fa-briefcase mr-2"></i>
+                        <span>{% translate 'Create subproject' %}</span>
+                        <i class="fas fa-chevron-right ml-2"></i>
+                    </a>
+                {% endif %}
+                {% if user|has_group:'Technical facilitator' %}
+                    <a href="{% url 'subprojects:mobile:register-contractor' %}"
+                       class="btn btn-primary btn-block btn-lg d-flex align-items-center justify-content-center mb-2 shadow-sm">
+                        <i class="fas fa-id-badge mr-2"></i>
+                        <span>{% translate 'Create contractor' %}</span>
+                        <i class="fas fa-chevron-right ml-2"></i>
+                    </a>
+                {% endif %}
+                {% if user|has_group:'Community facilitator' %}
                 <a href="{% url 'subprojects:mobile:register-village-development-committee' %}"
                    class="btn btn-primary btn-block btn-lg d-flex align-items-center justify-content-center mb-2 shadow-sm">
                     <i class="fas fa-users mr-2"></i>
                     <span>{% translate 'Create village development committee' %}</span>
                     <i class="fas fa-chevron-right ml-2"></i>
                 </a>
+                {% endif %}
             </div>
         </div>
     </div>
