--- a/templates/subprojects/schema_form.html
+++ b/templates/subprojects/schema_form.html
@@ -113,6 +113,7 @@
               <option value="number">Number</option>
               <option value="enum">Dropdown</option>
               <option value="date">Date</option>
+              <option value="file">File</option>
           </select>
         </div>
         <div class="form-group" id="enum-options-group" style="display: none;">
